--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,7 @@
       <form
         onsubmit="login()"
         id="login-form"
-        action="/signin.html"
+        action="/TEST_SS4/index.html"
       >
         <div class="username">
           <label for="">Username</label>
