--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Storage</title>
-    <link rel="stylesheet" href="/TEST_SS4/css/signin.css" />
+    <link rel="stylesheet" href="/TEST_SS4/css/style.css" />
   </head>
   <body>
     <div class="container">
