--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Storage</title>
-    <link rel="stylesheet" href="/TEST_SS4/css/login.css" />
+    <link rel="stylesheet" href="TEST_SS4/css/login.css" />
   </head>
   <body>
     <div class="container">
@@ -12,7 +12,7 @@
       <form
         onsubmit="login()"
         id="login-form"
-        action="/TEST_SS4/index.html"
+        action="TEST_SS4/index.html"
       >
         <div class="username">
           <label for="">Username</label>
@@ -27,6 +27,6 @@
         </div>
       </form>
     </div>
-    <script src="/TEST_SS4/js/test.js"></script>
+    <script src="TEST_SS4/js/test.js"></script>
   </body>
 </html>
