--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Storage</title>
-    <link rel="stylesheet" href="/TEST_SS4/css/style.css" />
+    <link rel="stylesheet" href="TEST_SS4/css/style.css" />
   </head>
   <body>
     <div class="container">
       <h1>SignIn</h1>
-      <form onsubmit="sigin()" action="/TEST_SS4/html/login.html">
+      <form onsubmit="sigin()" action="TEST_SS4/html/login.html">
         <div class="username">
           <label for="">Username</label>
           <input type="text" id="username" required />
