--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>SignIn</h1>
-      <form onsubmit="sigin()" action="html/login.html">
+      <form onsubmit="sigin()" action="login.html">
         <div class="username">
           <label for="">Username</label>
           <input type="text" id="username" required />
